--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
+        "sweetalert2": "^10.16.2",
         "tailwindcss": "^2.0.2"
     }
 }
